--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -4,6 +4,7 @@ $radius: 40%;
 form {
   display: inline-block;
   margin: auto;
+  margin-top: 30px;
   width: 200px;
 
   label {
@@ -18,7 +19,7 @@ form {
         background: #ccc;
 
         &:hover, &.active {
-          background: #fff;
+          background: linear-gradient(90deg, rgba(218,215,56,1) 0%, rgba(255,186,0,0.819765406162465) 100%);
         }
       }
     }
