--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,10 +1,12 @@
 $backgroundColor: #efefef;
+$buttonColor: linear-gradient(90deg, rgba(218,215,56,1) 0%, rgba(255,186,0,0.819765406162465) 100%);
 $radius: 40%;
 
 form {
   display: inline-block;
   margin: auto;
   margin-top: 30px;
+  margin-bottom: 30px;
   width: 200px;
 
   label {
@@ -19,7 +21,10 @@ form {
         background: #ccc;
 
         &:hover, &.active {
-          background: linear-gradient(90deg, rgba(218,215,56,1) 0%, rgba(255,186,0,0.819765406162465) 100%);
+          background: $buttonColor;
+        }
+        &.active{
+          background: $buttonColor;
         }
       }
     }
