--- a/src/App.scss
+++ b/src/App.scss
@@ -13,19 +13,34 @@ html, body {
 
 body {
   background: $backgroundImage;
-  background-position-y: -300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  // background-position-y: -300px;
   height: 100%;
   font-family: $ConcertOne;
 
   #root {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  #App{
+    display: flex;
+    flex-direction: column;
     height: 100%;
   }
 
+  main{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
   .request {
     margin: auto;
     margin-bottom: 0;
+    margin-top: 25vh;
   }
 
   .loading-spinner{
@@ -33,10 +48,10 @@ body {
   }
 
   footer {
+    margin-top: auto;
     background: $footerColor;
     border-top: 1px solid darken($footerColor, 5);
     padding: 1em 3em;
-    margin: 0;
 
     &:hover{
       background: darken($footerColor, 5);
