--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 $backgroundColor: #f5f545;
 $footerColor: #80af72;
 $headerColor: #7acaf9;
+$buttonColor: linear-gradient(90deg, rgba(218,215,56,1) 0%, rgba(255,186,0,0.819765406162465) 100%);
 $backgroundImage: url(../public/assets/poke-background.png);
 $ConcertOne: 'Concert One', sans-Serif;
 
@@ -22,7 +23,7 @@ body {
   #root {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
   }
 
@@ -40,7 +41,18 @@ body {
   .request {
     margin: auto;
     margin-bottom: 0;
-    margin-top: 25vh;
+    margin-top: 15vh;
+
+    span{
+      margin-left: 100px;
+      cursor: pointer;
+      padding: 5px;
+      background-color: #ccc;
+
+      &:hover{
+        background: $buttonColor;
+      }
+    }
   }
 
   .loading-spinner{
